# internal/models/employee.go
@@ -7,14 +7,12 @@ type Employee struct {
 	UserID      uint
 	FullName    string `gorm:"not null"`
 	Photo       string
-	Email       string `gorm:"uniqueIndex;not null"`
-	TeamID      uint
+	Email       string    `gorm:"uniqueIndex;not null"`
 	Birthday    time.Time `gorm:"not null"`
 	PhoneNumber string
 	GenderID    uint
 	CreatedAt   time.Time
 	UpdatedAt   time.Time
-	Team        Team
 	Gender      Gender
 }
 
@@ -25,12 +23,6 @@ type Role struct {
 }
 
 type Gender struct {
-	ID   uint `gorm:"primaryKey"`
-	Name string
-	Code string `gorm:"unique"`
-}
-
-type Team struct {
 	ID   uint `gorm:"primaryKey"`
 	Name string
 	Code string `gorm:"unique"`
