# internal/modules/employee/dto.go
@@ -6,7 +6,6 @@ type CreateEmployeeRequest struct {
 	FullName    string `json:"full_name" validate:"required"`
 	Photo       string `json:"photo"`
 	Email       string `json:"email" validate:"required,email"`
-	TeamID      uint   `json:"team_id" validate:"required"`
 	Birthday    string `json:"birthday" validate:"required"` // format: 2006-01-02
 	PhoneNumber string `json:"phone_number"`
 	GenderID    uint   `json:"gender_id" validate:"required"`
@@ -16,7 +15,6 @@ type UpdateEmployeeRequest struct {
 	FullName    string `json:"full_name"`
 	Photo       string `json:"photo"`
 	Email       string `json:"email" validate:"omitempty,email"`
-	TeamID      uint   `json:"team_id"`
 	Birthday    string `json:"birthday"` // format: 2006-01-02
 	PhoneNumber string `json:"phone_number"`
 	GenderID    uint   `json:"gender_id"`
@@ -30,6 +28,5 @@ type EmployeeResponse struct {
 	Email       string        `json:"email"`
 	PhoneNumber string        `json:"phone_number"`
 	Birthday    string        `json:"birthday"`
-	Team        models.Team   `json:"team"`
 	Gender      models.Gender `json:"gender"`
 }
